fixed misalignment on smaller desktop viewports

--- a/src/components/common/PieChart/PieChart.css
+++ b/src/components/common/PieChart/PieChart.css
@@ -64,3 +64,7 @@ div.tooltip-donut {
   pointer-events: none;
   font-size: 1rem;
 }
+
+div.pie-chart-legend-container {
+  min-width: 150px;
+}
